@@ -6,12 +6,12 @@
   <parent>
     <groupId>org.gbif</groupId>
     <artifactId>motherpom</artifactId>
-    <version>58-SNAPSHOT</version>
+    <version>59</version>
   </parent>
 
   <groupId>org.gbif.registry</groupId>
   <artifactId>registry-parent</artifactId>
-  <version>3.96.8-SNAPSHOT</version>
+  <version>4.1.15-SNAPSHOT</version>
   <name>GBIF Registry Parent</name>
   <description>GBIF Registry project</description>
 
@@ -86,23 +86,27 @@
     <mybatis-spring-boot-starter.version>2.3.2</mybatis-spring-boot-starter.version>
     <springdoc-openapi-ui.version>1.5.8</springdoc-openapi-ui.version>
     <spring-cloud-sleuth.version>2.2.8.RELEASE</spring-cloud-sleuth.version>
+    <micrometer.version>1.12.2</micrometer.version>
 
     <!-- GBIF -->
-    <gbif-api.version>1.17.0-SNAPSHOT</gbif-api.version>
+    <gbif-api.version>2.2.0-SNAPSHOT</gbif-api.version>
     <gbif-common.version>0.59</gbif-common.version>
-    <gbif-common-mybatis.version>1.4-SNAPSHOT</gbif-common-mybatis.version>
-    <gbif-common-ws.version>1.28-SNAPSHOT</gbif-common-ws.version>
-    <gbif-directory.version>1.13</gbif-directory.version>
-    <gbif-doi.version>2.22-SNAPSHOT</gbif-doi.version>
-    <gbif-download-query-tools.version>1.51.0</gbif-download-query-tools.version>
+    <gbif-common-mybatis.version>2.0.0</gbif-common-mybatis.version>
+    <gbif-common-ws.version>2.0.10-java11</gbif-common-ws.version>
+    <gbif-directory.version>1.14</gbif-directory.version>
+    <gbif-doi.version>3.0.0</gbif-doi.version>
+    <gbif-download-query-tools.version>2.0.4-SNAPSHOT</gbif-download-query-tools.version>
     <gbif-httputils.version>0.10</gbif-httputils.version>
-    <gbif-metadata-profile.version>2.2</gbif-metadata-profile.version>
+    <gbif-metadata-profile.version>2.6</gbif-metadata-profile.version>
     <gbif-parsers.version>0.67</gbif-parsers.version>
-    <gbif-postal-service.version>1.8.0</gbif-postal-service.version>
+    <gbif-postal-service.version>2.1.4-SNAPSHOT</gbif-postal-service.version>
     <xoai.version>4.1.0-gbif-4</xoai.version>
-    <gbif-occurrence.version>0.195.1</gbif-occurrence.version>
-    <gbif-vocabulary.version>1.0.5</gbif-vocabulary.version>
-    <checklistbank.version>2.127-SNAPSHOT</checklistbank.version>
+    <gbif-occurrence.version>1.0.28</gbif-occurrence.version>
+    <gbif-vocabulary.version>2.0.2</gbif-vocabulary.version>
+    <gbif-kvs.version>3.0</gbif-kvs.version>
+    <checklistbank.version>3.0.0</checklistbank.version>
+    <dwc-api.version>2.1.7-SNAPSHOT</dwc-api.version>
+    <dwca-io.version>3.0.0</dwca-io.version>
 
     <!-- Third party -->
     <commons-digester.version>3.2</commons-digester.version>
@@ -128,6 +132,7 @@
     <woodstox.version>4.4.1</woodstox.version>
     <zookeeper.version>3.8.1</zookeeper.version>
     <curator.version>5.5.0</curator.version>
+    <curator-framework.version>5.5.0-disable-connectstr-updates</curator-framework.version>
     <owasp-java-html-sanitizer.version>20200713.1</owasp-java-html-sanitizer.version>
     <super-csv.version>2.4.0</super-csv.version>
     <opencsv.version>5.7.1</opencsv.version>
@@ -135,6 +140,7 @@
     <avro.version>1.8.2</avro.version>
     <jaxb-api.version>2.3.1</jaxb-api.version>
     <swagger-annotations.version>2.2.3</swagger-annotations.version>
+    <resilience4j.version>1.7.0</resilience4j.version>
 
     <!-- Hadoop -->
     <hadoop.version>2.6.0-cdh5.16.2</hadoop.version>
@@ -144,8 +150,8 @@
     <junit.version>5.9.1</junit.version>
     <mockito.version>3.3.3</mockito.version>
     <xmlunit.version>2.6.3</xmlunit.version>
-    <postgresql-testcontainers.version>1.19.8</postgresql-testcontainers.version>
-    <testcontainers-elasticsearch.version>1.19.8</testcontainers-elasticsearch.version>
+    <postgresql-testcontainers.version>1.20.2</postgresql-testcontainers.version>
+    <testcontainers-elasticsearch.version>1.20.2</testcontainers-elasticsearch.version>
     <mock-javamail.version>1.9</mock-javamail.version>
     <mybatis-spring-boot-starter-test.version>2.0.0</mybatis-spring-boot-starter-test.version>
     <reflections.version>0.9.12</reflections.version>
@@ -240,6 +246,12 @@
         <groupId>org.springdoc</groupId>
         <artifactId>springdoc-openapi-ui</artifactId>
         <version>${springdoc-openapi-ui.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.micrometer</groupId>
+        <artifactId>micrometer-registry-prometheus</artifactId>
+        <version>${micrometer.version}</version>
+        <scope>runtime</scope>
       </dependency>
 
       <!-- GBIF dependencies -->
@@ -431,6 +443,21 @@
         <artifactId>vocabulary-rest-ws-client</artifactId>
         <version>${gbif-vocabulary.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.gbif.kvs</groupId>
+        <artifactId>kvs-rest-clients</artifactId>
+        <version>${gbif-kvs.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.gbif</groupId>
+        <artifactId>dwc-api</artifactId>
+        <version>${dwc-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.gbif</groupId>
+        <artifactId>dwca-io</artifactId>
+        <version>${dwca-io.version}</version>
+      </dependency>
 
       <!-- Third party dependencies -->
       <dependency>
@@ -458,7 +485,7 @@
       <dependency>
         <groupId>org.apache.curator</groupId>
         <artifactId>curator-framework</artifactId>
-        <version>${curator.version}</version>
+        <version>${curator-framework.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.curator</groupId>
@@ -663,6 +690,13 @@
         <version>${cache2k.version}</version>
       </dependency>
 
+      <!-- Fault tolerance - Used for API service calls-->
+      <dependency>
+        <groupId>io.github.resilience4j</groupId>
+        <artifactId>resilience4j-retry</artifactId>
+        <version>${resilience4j.version}</version>
+      </dependency>
+
       <dependency>
         <groupId>com.zaxxer</groupId>
         <artifactId>HikariCP</artifactId>
@@ -795,6 +829,30 @@
         <artifactId>spotless-maven-plugin</artifactId>
         <version>${spotless-maven-plugin.version}</version>
       </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven-surefire-plugin.version}</version>
+        <configuration>
+          <argLine>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argLine>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>${maven-failsafe-plugin.version}</version>
+        <configuration>
+          <argLine>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argLine>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>${maven-release-plugin.version}</version>
+      </plugin>
     </plugins>
 
     <pluginManagement>
@@ -803,6 +861,9 @@
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
           <version>${spring-boot-maven-plugin.version}</version>
+          <configuration>
+            <jvmArguments>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED</jvmArguments>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
